--- a/manifests/ing-general.yaml
+++ b/manifests/ing-general.yaml
@@ -3,24 +3,29 @@ kind: Ingress
 metadata:
   name: general-ingress
   namespace: otus-proj
-  annotations:
-    nginx.ingress.kubernetes.io/rewrite-target: /$2
 spec:
   ingressClassName: general-nginx
   rules:
-  - http:
-      paths:
-      - path: /
-        pathType: Prefix
-        backend:
-          service:
-            name: nginx-service
-            port:
-              number: 80
-      - path: /grafana(/|$)(.*)
-        pathType: ImplementationSpecific
-        backend:
-            service:
-              name: grafana-proxy
-              port:
-                number: 3000
+    - http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+              service:
+                name: frontend-proxy
+                port:
+                  number: 80
+          - path: /argocd/
+            pathType: Prefix
+            backend:
+                service:
+                  name: argocd-proxy
+                  port:
+                    number: 80
+          - path: /grafana/
+            pathType: Prefix
+            backend:
+              service:
+                name: grafana-proxy
+                port:
+                  number: 3000
