--- a/otus-cluster/group_vars/k8s_cluster/addons.yml
+++ b/otus-cluster/group_vars/k8s_cluster/addons.yml
@@ -4,7 +4,7 @@
 # dashboard_enabled: false
 
 # Helm deployment
-helm_enabled: false
+helm_enabled: true
 
 # Registry deployment
 registry_enabled: false
@@ -208,8 +208,8 @@ metallb_namespace: "metallb-system"
 #           address_pool:
 #             - pool2
 
-argocd_enabled: false
-# argocd_namespace: argocd
+argocd_enabled: true
+argocd_namespace: argocd
 # Default password:
 #   - https://argo-cd.readthedocs.io/en/stable/getting_started/#4-login-using-the-cli
 #   ---
@@ -218,7 +218,7 @@ argocd_enabled: false
 #   argocd admin initial-password -n argocd
 #   ---
 # Use the following var to set admin password
-# argocd_admin_password: "password"
+argocd_admin_password: "admin"
 
 # The plugin manager for kubectl
 
