--- a/otus-cluster/inventory.ini
+++ b/otus-cluster/inventory.ini
@@ -7,7 +7,7 @@
 # We should set etcd_member_name for etcd cluster. The node that are not etcd members do not need to set the value,
 # or can set the empty string value.
 [kube_control_plane]
-node1 ansible_host=172.17.0.97  # ip=10.3.0.1 etcd_member_name=etcd1
+kube-master ansible_host=172.17.0.97  # ip=10.3.0.1 etcd_member_name=etcd1
 # node2 ansible_host=95.54.0.13  # ip=10.3.0.2 etcd_member_name=etcd2
 # node3 ansible_host=95.54.0.14  # ip=10.3.0.3 etcd_member_name=etcd3
 
@@ -15,6 +15,6 @@ node1 ansible_host=172.17.0.97  # ip=10.3.0.1 etcd_member_name=etcd1
 kube_control_plane
 
 [kube_node]
-node2 ansible_host=172.17.0.98  # ip=10.3.0.4
-node3 ansible_host=172.17.0.99  # ip=10.3.0.5
+kube-node1 ansible_host=172.17.0.98  # ip=10.3.0.4
+kube-node2 ansible_host=172.17.0.99  # ip=10.3.0.5
 # node6 ansible_host=95.54.0.17  # ip=10.3.0.6
