--- a/manifests/grafana/v-grafana.yaml
+++ b/manifests/grafana/v-grafana.yaml
@@ -670,7 +670,15 @@ plugins: []
 ## Configure grafana datasources
 ## ref: http://docs.grafana.org/administration/provisioning/#datasources
 ##
-datasources: {}
+datasources:
+  datasources.yaml:
+    apiVersion: 1
+    datasources:
+      - name: Loki
+        type: loki
+        url: http://loki-loki-distributed-gateway.loki-space.svc.cluster.local
+        access: proxy
+        isDefault: true
 #  datasources.yaml:
 #    apiVersion: 1
 #    datasources:
