--- a/manifests/argocd-apps/loki-app.yaml
+++ b/manifests/argocd-apps/loki-app.yaml
@@ -8,6 +8,7 @@ spec:
   source:
     repoURL: https://grafana.github.io/helm-charts
     chart: loki
+    targetRevision: 6.30.1
     helm:
       valueFiles:
         - ../grafana/v-loki.yaml
