--- a/manifests/argocd-apps/loki-app.yaml
+++ b/manifests/argocd-apps/loki-app.yaml
@@ -10,8 +10,87 @@ spec:
     chart: loki
     targetRevision: 6.30.1
     helm:
-      valueFiles:
-        - ../grafana/v-loki.yaml
+      values: |
+        loki:
+          auth_enabled: false
+          
+          commonConfig:
+            replication_factor: 1
+
+          schemaConfig:
+            configs:
+              - from: "2024-04-01"
+                store: tsdb
+                object_store: filesystem    # локальное хранилище
+                schema: v13
+                index:
+                  prefix: loki_index_
+                  period: 24h
+
+          pattern_ingester:
+            enabled: true
+
+          limits_config:
+            allow_structured_metadata: true
+            volume_enabled: true
+
+          ruler:
+            enable_api: true
+
+          storage:
+            type: filesystem
+            filesystem:
+              directory: /var/loki # путь в контейнере
+        # =========================================================================
+        deploymentMode: SingleBinary
+        # =========================================================================
+        chunksCache:
+          enabled: true
+          allocatedMemory: 1024
+        # =========================================================================
+        gateway:
+          enabled: false
+        # =========================================================================
+        singleBinary:
+          replicas: 1
+          persistence:
+            enabled: false
+          
+          extraVolumeMounts:
+            - name: loki-storage
+              mountPath: /var/loki
+
+          extraVolumes:
+            - name: loki-storage
+              emptyDir: {}
+        # =========================================================================
+        minio:
+          enabled: false
+        # =========================================================================
+        backend:
+          replicas: 0
+        read:
+          replicas: 0
+        write:
+          replicas: 0
+        ingester:
+          replicas: 0
+        querier:
+          replicas: 0
+        queryFrontend:
+          replicas: 0
+        queryScheduler:
+          replicas: 0
+        distributor:
+          replicas: 0
+        compactor:
+          replicas: 0
+        indexGateway:
+          replicas: 0
+        bloomCompactor:
+          replicas: 0
+        bloomGateway:
+          replicas: 0
       parameters: []
   destination:
     server: https://kubernetes.default.svc
