--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -9,14 +9,14 @@ jobs:
 
     steps:
     - name: Install SSH client
-      run: sudo apt-get update && sudo apt-get install -y sshpass
+      run: sudo apt-get update && sudo apt-get install -y sshpass git python3-venv
 
     - name: SSH and run commands
       env:
         SSHPASS: ${{ secrets.SSH_PASSWORD }}
       run: |
-        sshpass -e ssh -o StrictHostKeyChecking=no -p 32323 petrich@46.161.6.169 <<'EOF'
-          ssh -p 32323 -o StrictHostKeyChecking=no petrich@46.161.6.169 <<'EOF'
+        sshpass -e ssh -o StrictHostKeyChecking=no -p ${{ secrets.SSH_PORT }} ${{ secrets.SSH_USER }}@${{ secrets.SSH_IP }} <<'EOF'
+          ssh -p {{ secrets.SSH_PORT }} -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }@${{ secrets.SSH_IP }} <<'EOF'
             git clone https://github.com/kubernetes-sigs/kubespray.git
             git clone https://github.com/Petrichao/otus_project.git
             cd kubespray
