--- a/manifests/argocd-apps/prometheus-app.yaml
+++ b/manifests/argocd-apps/prometheus-app.yaml
@@ -8,7 +8,7 @@ spec:
   source:
     repoURL: https://prometheus-community.github.io/helm-charts
     chart: kube-prometheus-stack
-    targetRevision: 75.10.0  # проверь актуальную версию: `helm search repo prometheus-community/kube-prometheus-stack`
+    targetRevision: 75.10.0
     helm:
       releaseName: prometheus
       values: |
